@@ -1,3 +1,7 @@
+2011-03-31 Roman
+- SYS: To user API is added function SYS.Security.access() for control access to some resources by OpenSCADA users.
+
+
 2011-03-30 Roman
 - DB: Into user API function "SQLreq()" is added set cell value to object property by collumn name, to row Array > 0.
 - SYS: To user API object TArray is set return null value for wrong indexes.
